# towering-tupilaqs

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  quiz_temporary.html  requirements.txt
db/: api.py  config.py  database.ini  db_classes.py  db_tables.py
db/db_config/: README.md  config.py  database_docker.ini  database_local.ini  database_remote.ini
db/utils/: config.py  db_classes.py  db_tables.py  official_questions.py
example/: equal.py
images/: tower-tupilaqs-paris.xcf
problems/explanations/: problem_1.md  problem_10.md  problem_11.md  problem_12.md  problem_1_explanation.md  problem_2.md  problem_3.md  problem_4.md  problem_5.md  problem_6.md  problem_7.md  problem_8.md  problem_9.md
problems/scripts/: problem_10_monopoly_simulation.py  problem_11_are_equal.py  problem_12_equal_except_integers.py  problem_1_multiplication.py  problem_2_square_of_a_number.py  problem_3_slot_machine.py  problem_4_double_base_palindrome.py  problem_5_count_ways_to_make_number.py  problem_6_truncatable_number.py  problem_7_lychrel_numbers.py  problem_8_count_letter.py  problem_9_amicable_numbers.py
site/: Dockerfile  package-lock.json  package.json
site/public/: index.html
site/src/: App.js  index.js
site/src/style/: box.scss  content-base.scss  main.scss  variables.scss
tests/: test_database.py
utilites/: logger_utility.py
